# mdpdf-web

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  puppeteer-config.json
public/: app.js  index.html  prism.min.js  styles.css
samples/: regression.md  smoke.md
scripts/: print_pdf.mjs  regression_smoke.ps1
src/: error.rs  main.rs  model.rs  state.rs
src/routes/: mod.rs
src/service/: markdown.rs  mermaid.rs  mod.rs  pdf.rs  process.rs  theme.rs
themes/common/: prism.min.js
themes/jp-standard/: print.css  style.css  template.html  theme.yaml
themes/modern-tech/: print.css  style.css  template.html  theme.yaml
workdir/: placeholder-page-smoke.md
